------------------------------------------------------------------------
r2131 | gaser | 2022-11-08 00:16:30

Changed paths:
 M CHANGES.txt
 M Contents.m
 M cat_update.m
 M doc/cat.html
 M spm_cat12.m


Changed: Added old html folder and PDF manual to file that are removed during 
         update.
------------------------------------------------------------------------
r2130 | gaser | 2022-11-08 00:03:30

Changed paths:
 M CHANGES.txt
 M doc/cat.html


Changed: Updated version number.
------------------------------------------------------------------------
r2129 | gaser | 2022-11-08 00:02:32

Changed paths:
 M CHANGES.txt
 M Makefile
 M doc/index.html


Changed: Updated CAT12 HTML doc.
Changed: Updated version number.
------------------------------------------------------------------------
r2128 | gaser | 2022-11-07 22:48:43

Changed paths:
 M CHANGES.txt
A  doc/css/cat.css


Added: Added css style file for entry page.
------------------------------------------------------------------------
r2127 | gaser | 2022-11-07 22:48:21

Changed paths:
 M CHANGES.txt
 M doc/cat.html


Added: Added css style file for entry page.
------------------------------------------------------------------------
r2126 | gaser | 2022-11-07 22:44:23

Changed paths:
 M CHANGES.txt
 M Contents.m
 M Makefile
 M cat12.m
 M cat_install_tfce.m
 M cat_update.m
 M doc/cat.html
AM doc/cat.txt
 M doc/css/main.css
 M doc/index.html
 M spm_cat12.m


Changed: Many changes to implement the new html help.
Changed: Updated Makefile to consider new html help.
Changed: Updated and moved cat.txt from html to doc folder.
Added:   Added css style file for entry page.
------------------------------------------------------------------------
r2125 | gaser | 2022-10-26 13:45:37

Changed paths:
 M CHANGES.txt
 M cat_batch_bids.sh
 M cat_plot_histogram.m


Changed: Included some of Jussi Tohkas modifications into cat_batch_bids.sh.
Fixed:   Reading of Freesurfer and gifti data in cat_plot_histogram was 